--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </p>
 
     <hr>
-    <p>
+    <p class="game-credits">
     Created by <a href="https://sarthak143.github.io/" target="_blank">Sarthak Bansal.</a>
     </p>
   </div>
