--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <hr>
     <p class="game-credits">
-    Created by <a href="https://sarthak143.github.io/" target="_blank">Sarthak Bansal.</a>
+    Made with <span class="red">❤</span> by <a href="https://sarthak143.github.io/" target="_blank">Sarthak Bansal.</a>
     </p>
   </div>
 
