--- a/index.html
+++ b/index.html
@@ -96,5 +96,6 @@
   <script src="js/local_storage_manager.js"></script>
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
+    <script src="js/inspect.js"></script>
 </body>
 </html>
